ci: add initial workflow

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
                 "path": "./snippets/snippets.code-snippets"
             }
         ]
+    },
+    "scripts": {
+      "lint:prettier": "prettier --check ."
     }
 }
