--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "name": "ornikar-snippets",
     "displayName": "ornikar-snippets",
+    "publisher": "ornikar",
+    "repository": "ornikar/vscode-frontend-extension",
     "description": "",
     "version": "0.0.1",
+    "license": "MIT",
+    "icon": "images/logo-512x512.png",
     "engines": {
         "vscode": "^1.55.0"
     },
@@ -16,5 +20,8 @@
                 "path": "./snippets/snippets.code-snippets"
             }
         ]
+    },
+    "devDependencies": {
+        "vsce": "^1.87.1"
     }
 }
