feat: add kitt typescript and css snippets

--- a/package.json
+++ b/package.json
@@ -17,8 +17,16 @@
   "contributes": {
     "snippets": [
       {
-        "language": "typescript",
-        "path": "./snippets/typescript.code-snippets"
+        "language": "typescriptreact",
+        "path": "./snippets/snippets.code-snippets"
+      },
+      {
+        "language": "typescriptreact",
+        "path": "./snippets/kitt.code-snippets"
+      },
+      {
+        "language": "postcss",
+        "path": "./snippets/kitt-css.code-snippets"
       }
     ]
   },
