--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
       }
     ]
   },
+  "scripts": {
+    "lint:prettier": "prettier --check ."
+  },
   "devDependencies": {
     "@ornikar/prettier-config": "^3.3.0",
     "prettier": "^2.2.1"
