--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "vscode-ornikar-extension",
   "displayName": "Ornikar Extension",
+  "publisher": "ornikar",
+  "repository": "ornikar/vscode-frontend-extension",
   "description": "Snippets for Ornikar Frontend Developers",
   "version": "0.0.1",
   "prettier": "@ornikar/prettier-config",
+  "license": "MIT",
+  "icon": "images/logo-512x512.png",
   "engines": {
     "vscode": "^1.55.0"
   },
@@ -23,6 +27,7 @@
   },
   "devDependencies": {
     "@ornikar/prettier-config": "^3.3.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "vsce": "^1.87.1"
   }
 }
