feat: add generic and react snippets

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "snippets": [
       {
         "language": "typescript",
-        "path": "./snippets/typescript.code-snippets"
+        "path": "./snippets/modules.code-snippets"
+      },
+      {
+        "language": "typescriptreact",
+        "path": "./snippets/react.code-snippets"
       }
     ]
   },
