--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,34 @@
-name: Deploy Extension
+name: release-please
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - main
 
 jobs:
-  deploy:
+  release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: GoogleCloudPlatform/release-please-action@v2
+        id: release
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          release-type: node
+          package-name: release-please-action
+
+      # publish:
+      - name: Checkout
+        # publication only occurs when a new release is created:
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/checkout@v2
+
       - uses: actions/setup-node@v2
+        if: ${{ steps.release.outputs.release_created }}
         with:
           node-version: 14
+
       - name: Cache dependencies
+        if: ${{ steps.release.outputs.release_created }}
         uses: actions/cache@v2
         with:
           path: node_modules
@@ -21,9 +36,13 @@ jobs:
           restore-keys: |
             v2-dependencies--${{ matrix.node-version }}-${{ runner.OS }}-
             v2-dependencies--${{ matrix.node-version }}-
+
       - name: Install Dependencies
+        if: ${{ steps.release.outputs.release_created }}
         run: yarn install --prefer-offline --pure-lockfile
+
       - name: Publish to Visual Studio Marketplace
+        if: ${{ steps.release.outputs.release_created }}
         uses: HaaLeo/publish-vscode-extension@v0
         with:
           pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
