enable modules code snippets for typescriptreact language

--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
       },
       {
         "language": "typescriptreact",
+        "path": "./snippets/modules.code-snippets"
+      },
+      {
+        "language": "typescriptreact",
         "path": "./snippets/react.code-snippets"
       }
     ]
