--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["config:js-app", "@ornikar"]
+  "extends": ["config:js-app", "@ornikar"],
+  "lockFileMaintenance": { "enabled": true }
 }
