--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,21 +25,11 @@ jobs:
       - uses: actions/setup-node@v2
         if: ${{ steps.release.outputs.release_created }}
         with:
-          node-version: 14
-
-      - name: Cache dependencies
-        if: ${{ steps.release.outputs.release_created }}
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: v2-dependencies--${{ matrix.node-version }}-${{ runner.OS }}-${{ hashFiles('yarn.lock') }}
-          restore-keys: |
-            v2-dependencies--${{ matrix.node-version }}-${{ runner.OS }}-
-            v2-dependencies--${{ matrix.node-version }}-
+          node-version: 18
 
       - name: Install Dependencies
         if: ${{ steps.release.outputs.release_created }}
-        run: yarn install --prefer-offline --pure-lockfile
+        run: yarn install --immutable --immutable-cache
 
       - name: Publish to Visual Studio Marketplace
         if: ${{ steps.release.outputs.release_created }}
