--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "icon": "images/logo-512x512.png",
   "engines": {
+    "vscode": "^1.55.0",
     "node": ">=16.10.0"
   },
   "categories": [
