--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,6 +2,8 @@ enableMessageNames: false
 
 nodeLinker: node-modules
 
+npmRegistryServer: 'https://registry.npmjs.org'
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-engines.cjs
     spec: 'https://raw.githubusercontent.com/devoto13/yarn-plugin-engines/main/bundles/%40yarnpkg/plugin-engines.js'
