--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,12 +2,12 @@ enableMessageNames: false
 
 nodeLinker: node-modules
 
-npmRegistryServer: 'https://registry.npmjs.org'
+npmRegistryServer: "https://registry.npmjs.org"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-engines.cjs
-    spec: 'https://raw.githubusercontent.com/devoto13/yarn-plugin-engines/main/bundles/%40yarnpkg/plugin-engines.js'
+    spec: "https://raw.githubusercontent.com/devoto13/yarn-plugin-engines/main/bundles/%40yarnpkg/plugin-engines.js"
   - path: .yarn/plugins/@yarnpkg/plugin-conventional-version.cjs
-    spec: 'https://raw.githubusercontent.com/christophehurpeau/yarn-plugin-conventional-version/main/bundles/@yarnpkg/plugin-conventional-version.cjs'
+    spec: "https://raw.githubusercontent.com/christophehurpeau/yarn-plugin-conventional-version/main/bundles/@yarnpkg/plugin-conventional-version.cjs"
 
 yarnPath: .yarn/releases/yarn-3.6.4.cjs
