--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "lint:prettier:fix": "prettier --no-error-on-unmatched-pattern --write . '**/.env*' '**/*.env'"
   },
   "devDependencies": {
-    "@ornikar/prettier-config": "6.0.7",
-    "@ornikar/repo-config": "10.6.0",
-    "prettier": "2.8.8",
-    "vsce": "2.7.0"
+    "@ornikar/prettier-config": "7.0.0",
+    "@ornikar/repo-config": "13.0.1",
+    "@vscode/vsce": "2.21.1",
+    "prettier": "2.8.8"
   },
   "packageManager": "yarn@3.6.4"
 }
