--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,4 @@
 {
-  "extends": ["config:js-app", "github>ornikar/renovate-presets:frontend-legacy"],
+  "extends": ["config:js-app", "github>ornikar/renovate-presets:frontend"],
   "lockFileMaintenance": { "enabled": true }
 }
